# connect-foUR7e

./: .gitignore  README.md  frames_2026-04-29_10.34.06.gv  frames_2026-05-02_14.44.13.gv  frames_2026-05-02_19.21.26.gv  frames_2026-05-02_19.23.53.gv  frames_2026-05-02_19.24.14.gv  frames_2026-05-02_19.27.51.gv  frames_2026-05-02_19.34.58.gv  frames_2026-05-02_19.36.47.gv  frames_2026-05-02_19.54.16.gv  frames_2026-05-02_20.25.41.gv  frames_2026-05-02_20.26.10.gv  frames_2026-05-02_20.26.33.gv
src/board_calibration/: package.xml  setup.cfg  setup.py
src/board_calibration/board_calibration/: K.npy  __init__.py  aruco_test.py  board_corners.py  calibrate.py  capture.py  colors.txt  disc_colors.py  dist.npy  generate_params.py
src/board_detector/: package.xml  setup.cfg  setup.py
src/board_localizer/: package.xml  setup.cfg  setup.py
src/connect4_launch/: package.xml  setup.cfg  setup.py
src/disc_detector/: package.xml  setup.cfg  setup.py
src/game_msgs/: CMakeLists.txt  package.xml
src/game_msgs/msg/: DiscLoc2d.msg  (+3 more)
src/game_planner/: package.xml  setup.cfg  setup.py
src/game_solver/: package.xml  setup.cfg  setup.py
src/game_solver/game_solver/: game_solver_node.py
src/game_solver/resource/: game_solver
src/game_state/: package.xml  setup.cfg  setup.py
src/piece_localization/: package.xml  setup.cfg  setup.py
src/piece_localization/piece_localization/: move.py  piece_localizer.py  piece_localizer_2.py
src/piece_localization_interfaces/: CMakeLists.txt  package.xml
src/planning/: package.xml  setup.py
src/planning_interfaces/: CMakeLists.txt  package.xml
src/visual_servoing/: setup.py
(+46 files in other folders)
